--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="row mt-2">
         <div class="col text-center">
 
-            <button class="btn btn-danger">Nuevo juego</button>
-            <button class="btn btn-primary">Pedir carta</button>
-            <button class="btn btn-primary">Detener</button>
+            <button id="btnNuevo" class="btn btn-danger">Nuevo juego</button>
+            <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
+            <button id="btnDetener" class="btn btn-primary">Detener</button>
 
         </div>
     </div>
