--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <h1>Jugador 1 - <small>0</small></h1>
             <div id="jugador-cartas">
-                <img class="carta" src="assets/cartas/10C.png">
+                <!-- <img class="carta" src="assets/cartas/10C.png"> -->
             </div>
 
         </div>
