ep 55 turno de computadora

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <h1>Computadora - <small>0</small></h1>
             <div id="computadora-cartas">
-                <img class="carta" src="assets/cartas/10C.png">
+                <!-- <img class="carta" src="assets/cartas/10C.png"> -->
             </div>
 
         </div>
